# ingestor

./: .gitignore  README.md  makefile  pyproject.toml
ingestor/: cli.py  exceptions.py  tq_utils.py  utils.py
ingestor/schemas/: snapshots.py
