[tool.poetry]
name = "ingestor"
version = "0.1.0"
description = ""
authors = ["p3i0t <wangxin_0716@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.31"
deltalake = "^0.18.1"
typer = "^0.12.3"
numpy = "1.26.3"
ray = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ingestor = "ingestor.cli:app"
